--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ edition = "2021"
 async-trait = "0.1"
 tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.6.0", features = [ "runtime-tokio-native-tls" , "postgres" ] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+uuid = { version = "1.1.2", features = ["serde", "v4"] }
+lazy_static = "1"
+async_once = "0.2"
+envconfig = "0.10.0"
